# gptreino

./: README.md  app.py  ficha_tecnica.csv  main.py  pyproject.toml  utils.py
static/: custom-nav.js  home.css  home.js  tabela.css
templates/: ficha_treino.html  home.html
test/: test_openai.py
