[tool.poetry]
name = "gptreino"
version = "0.1.0"
description = ""
authors = ["amandazeved <amanda.azd0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
flask = "^3.0.0"
reportlab = "^4.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
